spacing issue with footer image

--- a/index1.css
+++ b/index1.css
@@ -269,7 +269,6 @@ display: flex;}
 
 .footer-contact img {
     width: 20px;
-    height: 20px;
     padding-left: 5px;
     
 }
